Parsing stuff implemented and improved, more testcases

--- a/Bundlor.QueryCompiler/Bundlor.QueryCompiler.csproj
+++ b/Bundlor.QueryCompiler/Bundlor.QueryCompiler.csproj
@@ -8,7 +8,7 @@
     
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
-            <_Parameter1>Jhlgns.QueryCompiler.Tests</_Parameter1>
+            <_Parameter1>Bundlor.QueryCompiler.Tests</_Parameter1>
         </AssemblyAttribute>
     </ItemGroup>
 </Project>
