--- a/Bundlor.QueryCompiler.Tests/Bundlor.QueryCompiler.Tests.csproj
+++ b/Bundlor.QueryCompiler.Tests/Bundlor.QueryCompiler.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Jhlgns.QueryCompiler\Jhlgns.QueryCompiler.csproj" />
+    <ProjectReference Include="..\Bundlor.QueryCompiler\Bundlor.QueryCompiler.csproj" />
   </ItemGroup>
 
 </Project>
